src/objects/BE_Modal_Record_Field__mdt.object
<CustomObject>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_ApiName__c</fullName>
        <label>Field ApiName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Width__c</fullName>
        <label>Width</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <label>Help Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modal_Record_Row__c</fullName>
        <label>Modal Record Row</label>
        <referenceTo>BE_Modal_Record_Row__mdt</referenceTo>
        <relationshipLabel>Modal Records Fields</relationshipLabel>
        <relationshipName>Modal_Records_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order Field</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Modal Record Field</label>
    <listViews>
        <fullName>Fields_View</fullName>
        <columns>MasterLabel</columns>
        <columns>Field_ApiName__c</columns>
        <columns>Field_Width__c</columns>
        <columns>Order__c</columns>
        <columns>Modal_Record_Row__c</columns>
        <filterScope>Everything</filterScope>
        <label>Vista de campos</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Modal Records Fields</pluralLabel>
    <validationRules>
        <fullName>Max_Width_12</fullName>
        <active>true</active>
        <errorConditionFormula>Field_Width__c &gt; 12</errorConditionFormula>
        <errorDisplayField>Field_Width__c</errorDisplayField>
        <errorMessage>El ancho maximo por campo es 12.</errorMessage>
    </validationRules>
</CustomObject>